vpc.tf
// In general, AWS creates a default VPC for each AWS region when the
// account is created

resource "aws_vpc" "ec2-vpc" {

}
